--- a/sick-fits/frontend/package.json
+++ b/sick-fits/frontend/package.json
@@ -1,8 +1,8 @@
 {
   "name": "sick-fits-frontend",
   "version": "1.0.0",
-  "description": "Sick Fits! An example React, GraphQL, Next and Apollo",
-  "main": "index.js",
+  "private": true,
+  "description": "Advanced React course frontend",
   "scripts": {
     "dev": "next -p 7777",
     "build": "next build",
@@ -10,7 +10,7 @@
     "test": "NODE_ENV=test jest --watch",
     "heroku-postbuild": "next build"
   },
-  "author": "",
+  "author": "Joshua Scott",
   "license": "ISC",
   "dependencies": {
     "apollo-boost": "^0.1.16",
