--- a/sick-fits/frontend/.eslintrc
+++ b/sick-fits/frontend/.eslintrc
@@ -53,6 +53,7 @@
     "import/extensions": 0,
     "no-underscore-dangle": 0,
     "consistent-return": 0,
+    "react/button-has-type": 0,
     "react/display-name": 1,
     "react/no-array-index-key": 0,
     "react/prefer-stateless-function": 0,
