--- a/sick-fits/frontend/.eslintrc
+++ b/sick-fits/frontend/.eslintrc
@@ -61,6 +61,7 @@
     "react/no-unescaped-entities": 0,
     "jsx-a11y/accessible-emoji": 0,
     "react/require-default-props": 0,
+    "react/destructuring-assignment": 0,
     "react/jsx-filename-extension": [
       1,
       {
