--- a/sick-fits/backend/prisma.yml
+++ b/sick-fits/backend/prisma.yml
@@ -4,6 +4,12 @@
 # Updating prisma might fix it but I want to be on the same version as Wes so the course goes smoothly.
 # That's why the endpoint is hardcoded here and not (only) in the .env file
 
+# So to deploy changes to Prisma I must:
+# 1. Run `yarn deploy` from `sick-fits/backend/`
+# 2. It'll run, and tell me `Running graphql get-schema -p prisma ✔`
+# 3. That was a lie (it didn't really work) so I must `cd ..` to `sick-fits/`
+# 4. Finally, run `graphql get-schema -p prisma` manually
+
 # endpoint: ${env:PRISMA_ENDPOINT}
 endpoint: https://eu1.prisma.sh/joshua-scott-37c39a/sick-fits/dev
 datamodel: datamodel.prisma
